Finished section three and finished footer issue with sec three banner-button, will add contrasting borders

--- a/style.css
+++ b/style.css
@@ -1,12 +1,3 @@
-* {
-
-    border:solid red;
-}
-
-html{
-    
-    
-}
 
 
 body {
@@ -55,8 +46,8 @@ header {
     background-repeat: no-repeat; 
     background-size: cover;
     background-position:center;
-    flex-wrap:wrap;
     padding: 80px 0px;
+    flex-wrap:wrap;
     
 }
 
@@ -64,7 +55,7 @@ header {
 
     font-family: toxia, "times new roman", sans-serif;
     color:rgb(42, 121, 16);
-    flex:1;
+    flex:1 0 581px;
     display:flex;
     flex-direction:column;
     justify-content:center;
@@ -74,6 +65,8 @@ header {
     flex-basis:380px;
     -webkit-text-stroke: black;
    -webkit-text-stroke-width: .5px;
+   text-align:center;
+   
 }
 
 .awesome-image {
@@ -106,6 +99,7 @@ flex:0 0 500px;
     font-size:30px;
     font-family: toxia, "times new roman", sans-serif;
     color:yellow;
+    align-self:center;
     
     
 }
@@ -154,10 +148,6 @@ flex:0 0 500px;
 
 }
 
-   
-    
-
-
 .sec-three{
 
     display:flex;
@@ -194,6 +184,8 @@ flex:0 0 500px;
     display:flex;
     flex-basis:300px;
     justify-content:center;
+    align-items: center;
+    background-color: rgb(255 205 0);
 
 
 }
@@ -201,18 +193,53 @@ flex:0 0 500px;
       
 
 .sign-up.container {
-    flex:0 0 50%;
+    flex:0 0 65%;
     align-items:center;
     display:flex;
     justify-content: space-evenly;
+    height: 55%;
+    border-radius: 10px;
+    background-color: rgb(59 112 60);
+    flex-wrap:wrap;
+    align-content:center;
    
 }
 
 
 .sign-up.container.text {
     display:flex;
-    flex-direction:column;
-    align-items:flex-start;
+    text-align:center;
+    font-family: toxia, "times new roman", sans-serif;
+    color:yellow;
+    -webkit-text-stroke: black;
+    -webkit-text-stroke-width: .5px;
+    flex-wrap: wrap;
+    justify-content: left;
+    align-content: center;
+    flex: 0 0 355px;
+    flex:1 1 450px;
+    margin-left:10px;
+  
+    
+}
+
+.sec-four.button {
+
+    border: solid yellow 3px;
+    background-color:   rgb(59 112 60);
+    border-radius: 5px;
+    font-family: toxia, "times new roman", sans-serif;
+    color: yellow;
+    -webkit-text-stroke: black;
+    -webkit-text-stroke-width: .5px;
+    text-align:center;
+    flex-basis: 20%;
+    height: 50px;
+    font-size: 30px;
+    flex: 0 1 200px;
+    margin:5px;
+    margin-right:10px;
+
 }
 
 footer {
@@ -220,8 +247,13 @@ footer {
     display:flex;
     justify-content:center;
     align-items: center;
+     flex-basis:100px;
+     flex-wrap:wrap;
+     background-color:rgb(59 112 60) ;
+     color:yellow;
+     font-family: toxia, "times new roman", sans-serif;
+     -webkit-text-stroke: black;
+     -webkit-text-stroke-width: .5px;
+     font-size:30px
 
-
-
-    flex-basis:100px;
 }
